compiler/tests-spec/testData/psi/linked/constant-literals/real-literals/p-3/neg/3.1.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-draft
 * PLACE: constant-literals, real-literals -> paragraph 3 -> sentence 3
 * NUMBER: 1
 * DESCRIPTION: Real literals with a not allowed dot at the end.
 */

val value = 0.
val value = 00.
val value = 000.
val value = 0000.

val value = 0.
val value = 1.
val value = 2.
val value = 3.
val value = 4.
val value = 5.
val value = 6.
val value = 7.
val value = 8.

val value = 1.
val value = 22.
val value = 333.
val value = 4444.
val value = 55555.
val value = 666666.
val value = 7777777.
val value = 88888888.
val value = 999999999.

val value = 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000.
val value = 99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999.
val value = 222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222.
val value = 555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555123456785012345678501234567850123456785012345678501234567850.
